# pysay

./: .editorconfig  .envrc  .gitignore  CHANGELOG.md  README.md  cliff.toml  devbox.json  devenv.nix  flake.nix  pyproject.toml  python-packages.nix  shell.nix  update-devbox-locks.sh  update-flake-locks.sh  update-uv-constraints.sh  update-uv-locks.sh
src/pysay/: __init__.py  __main__.py  _version.py  main.py  snake.py
tests/: test_main.py  test_snake.py
